k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: almona-industrial
  labels:
    name: almona-industrial
    environment: production
